--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,9 @@ dependencies:
   intl: ^0.19.0
   pin_code_fields: ^8.0.1
   pretty_qr_code: ^3.3.0 
+  provider: ^6.1.2
   sign_in_button: ^3.2.0 
+  supabase_flutter: ^2.6.0
 
 
 dev_dependencies:
